changed to okta as oidc server, fixed startup failures due to wrong entity annotation, wrong placed id annotation, added gitignore file

--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -4,3 +4,15 @@ quarkus.datasource.password=changeme
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.datasource.jdbc.max-size=16
+
+quarkus.flyway.locations=db/migration
+quarkus.flyway.migrate-at-start=true
+
+quarkus.oidc.authentication.scopes=openid,profile,email
+quarkus.oidc.application-type=web-app
+quarkus.oidc.authentication.redirect-path=/callback
+quarkus.oidc.authentication.restore-path-after-redirect=true
+
+quarkus.oidc.end-session-path=oidc/logout
+quarkus.oidc.logout.path=/logout
+quarkus.oidc.logout.post-logout-path=/hello
