--- a/quizz-app-fe/package.json
+++ b/quizz-app-fe/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.3.0",
     "next": "^15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1"
+    "react-hook-form": "^7.46.1",
+    "react-router": "^7.1.1"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.3",
