--- a/quizz-app-fe/package.json
+++ b/quizz-app-fe/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-router": "^7.1.1"
+    "react-router": "^7.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.3",
