--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.datasource.jdbc.max-size=16
 
 quarkus.flyway.locations=db/migration
 quarkus.flyway.migrate-at-start=true
+quarkus.flyway.create-schemas=true
 
 quarkus.oidc.authentication.scopes=openid,profile,email
 quarkus.oidc.application-type=web-app
