--- a/quizz-app-fe/package.json
+++ b/quizz-app-fe/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/material": "^6.3.0",
+    "@mui/icons-material": "6.3.0",
     "axios": "^1.7.9",
     "next": "^15.1.3",
     "react": "^18.2.0",
