--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+quarkus.application.name=quiz-app
+
+quarkus.rest.path=/${quarkus.application.name}/resources
+
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=changeme
