--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=changeme
 
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema\\=quizapp
 quarkus.datasource.jdbc.max-size=16
 
 quarkus.flyway.locations=db/migration
