add cors policy, add missing column annotation for hibernate entity

--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -21,3 +21,6 @@ quarkus.oidc.authentication.restore-path-after-redirect=true
 quarkus.oidc.end-session-path=oidc/logout
 quarkus.oidc.logout.path=/logout
 quarkus.oidc.logout.post-logout-path=/hello
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=https://dev-ttr18ohq2rtiayws.us.auth0.com
