--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -9,8 +9,11 @@ quarkus.datasource.password=changeme
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema\\=quizapp
 quarkus.datasource.jdbc.max-size=16
 
+quarkus.hibernate-orm.database.default-schema=quizapp
+
 quarkus.flyway.locations=db/migration
 quarkus.flyway.migrate-at-start=true
+quarkus.flyway.schemas=quizapp
 quarkus.flyway.create-schemas=true
 
 quarkus.oidc.authentication.scopes=openid,profile,email
