adding configurations for cors

--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -1,29 +1,21 @@
 quarkus.application.name=quiz-app
-
 quarkus.rest.path=/${quarkus.application.name}/resources
-
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=changeme
-
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema\\=quizapp
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=quizapp
 quarkus.datasource.jdbc.max-size=16
-
 quarkus.hibernate-orm.database.default-schema=quizapp
-
 quarkus.flyway.locations=db/migration
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.schemas=quizapp
 quarkus.flyway.create-schemas=true
-
 quarkus.oidc.authentication.scopes=openid,profile,email
 quarkus.oidc.application-type=web-app
 quarkus.oidc.authentication.redirect-path=/callback
 quarkus.oidc.authentication.restore-path-after-redirect=true
-
 quarkus.oidc.end-session-path=oidc/logout
 quarkus.oidc.logout.path=/logout
 quarkus.oidc.logout.post-logout-path=/hello
-
 quarkus.http.cors=true
-quarkus.http.cors.origins=https://dev-ttr18ohq2rtiayws.us.auth0.com
+quarkus.http.cors.origins=https://dev-ttr18ohq2rtiayws.us.auth0.com,http://localhost:3000
