Speichern der aktuellen Änderungen vor Checkout

--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -19,3 +19,6 @@ quarkus.oidc.logout.path=/logout
 quarkus.oidc.logout.post-logout-path=/hello
 quarkus.http.cors=true
 quarkus.http.cors.origins=https://dev-ttr18ohq2rtiayws.us.auth0.com,http://localhost:3000
+quarkus.http.cors.headers=Authorization,Content-Type,Accept
+quarkus.http.cors.exposed-headers=Authorization
+quarkus.http.cors.credentials=true
