--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -5,7 +5,10 @@ quarkus.datasource.username=admin
 quarkus.datasource.password=changeme
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=quizapp
 quarkus.datasource.jdbc.max-size=16
+
 quarkus.hibernate-orm.database.default-schema=quizapp
+quarkus.hibernate-orm.log.bind-parameters=false
+
 quarkus.flyway.locations=db/migration
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.schemas=quizapp
