--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -14,12 +14,6 @@ quarkus.flyway.migrate-at-start=true
 quarkus.flyway.schemas=quizapp
 quarkus.flyway.create-schemas=true
 
-#
-#quarkus.oidc.authentication.scopes=openid,profile,email,offline_access
-#quarkus.oidc.authentication.java-script-auto-redirect=false
-#quarkus.oidc.end-session-path=oidc/logout
-#quarkus.oidc.logout.path=/logout
-#quarkus.oidc.logout.post-logout-path=/hello
 quarkus.http.cors=true
 %dev.quarkus.http.cors.origins=/.*/
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS,PATCH
@@ -28,11 +22,6 @@ quarkus.http.cors.exposed-headers=Access-Control-Allow-Origin,Authorization,Cont
 quarkus.http.cors.access-control-max-age=24H
 quarkus.http.cors.access-control-allow-credentials=true
 
-
-#
-#quarkus.oidc.application-type=WEB_APP
-#quarkus.oidc.authentication.redirect-path=/callback
-#quarkus.oidc.authentication.restore-path-after-redirect=true
 
 
 quarkus.log.category."io.quarkus.rest".level=TRACE
@@ -43,7 +32,8 @@ quarkus.log.level=DEBUG
 quarkus.http.access-log.enabled=true
 quarkus.http.access-log.pattern=%r\n%{ALL_REQUEST_HEADERS}
 quarkus.log.category."org.apache.http".level=DEBUG
-quarkus.rest-client.logging.scope=request-response
 
 
 quarkus.http.auth.basic=true
+
+quarkus.container-image.build=true
