--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -3,8 +3,11 @@ quarkus.rest.path=/${quarkus.application.name}/resources
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=changeme
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=quizapp
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=quizapp
+quarkus.datasource.jdbc.url=jdbc:postgresql://host.containers.internal:5432/postgres?currentSchema=quizapp
 quarkus.datasource.jdbc.max-size=16
+
+quarkus.http.port=8080
 
 quarkus.hibernate-orm.database.default-schema=quizapp
 quarkus.hibernate-orm.log.bind-parameters=false
@@ -37,3 +40,9 @@ quarkus.log.category."org.apache.http".level=DEBUG
 quarkus.http.auth.basic=true
 
 quarkus.container-image.build=true
+quarkus.container-image.name=quiz-app
+quarkus.container-image.tag=1.0.0
+quarkus.container-image.push=false
+#quarkus.podman.dockerfile-jvm-path=../docker/Dockerfile.jvm
+
+quarkus.http.static-resources.index-page=./home/page.tsx
