--- a/quizz-app-be/src/main/docker/Dockerfile.jvm
+++ b/quizz-app-be/src/main/docker/Dockerfile.jvm
@@ -1,25 +1,16 @@
+FROM registry.access.redhat.com/ubi8/openjdk-17:1.20
 
 
-FROM registry.access.redhat.com/ubi8/openjdk-21:1.20
-
-ENV LANGUAGE='en_US:en'
-
-#RUN apt-get install -y curl \
-#  && curl -sL https://deb.nodesource.com/setup_9.x | bash - \
-#  && apt-get install -y nodejs \
-#  && curl -L https://www.npmjs.com/install.sh | sh
-
-
+RUN pwd && ls
 # We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
+COPY --chown=1000 target/quarkus-app/lib/ /deployments/lib/
+COPY --chown=1000 target/quarkus-app/*.jar /deployments/
+COPY --chown=1000 target/quarkus-app/app/ /deployments/app/
+COPY --chown=1000 target/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
-USER 185
+USER 1000
 ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
 ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
 
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
-
