--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,10 @@ services:
       - app-network
 
   frontend:
-    build: ./quizz-app-fe
+    build:
+      context: ./quizz-app-fe
+      args:
+        - NEXT_PUBLIC_API_URL=http://backend:8080
     ports:
       - "3000:3000"
     depends_on:
