--- a/quizz-app-fe/Dockerfile
+++ b/quizz-app-fe/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
 
+ARG NEXT_PUBLIC_API_URL
+
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
 COPY package.json package-lock.json ./
 RUN npm install --frozen-lockfile
 
