--- a/quizz-app-be/src/main/resources/application.properties
+++ b/quizz-app-be/src/main/resources/application.properties
@@ -18,7 +18,7 @@ quarkus.flyway.schemas=quizapp
 quarkus.flyway.create-schemas=true
 
 quarkus.http.cors=true
-%dev.quarkus.http.cors.origins=/.*/
+quarkus.http.cors.origins=/.*/
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS,PATCH
 quarkus.http.cors.headers=origin,accept,authorization,content-type,x-requested-with
 quarkus.http.cors.exposed-headers=Access-Control-Allow-Origin,Authorization,Content-Disposition
